--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple web app with simple UI to locate specified physicians on a map",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
